Add trace event to debug jank in VariationsService

The janks are really short, but it looks like frequently this code runs
for more than 100ms on main thread.

BUG=891488

Change-Id: Ie195413fe1244cea671f0e77e5defc3faa807f0e
Reviewed-on: https://chromium-review.googlesource.com/c/1427079
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#626774}